[package]
name = "ryattl"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
colored = "2.2.0"
icu_calendar = "1.5.2"
icu_datetime = "1.5.1"
icu_locid = "1.5.0"
jiff = "0.1.21"
sys-locale = "0.3.2"

[profile.release]
opt-level = "z"
strip = true
lto = true
panic = "abort"
codegen-units = 1
